fix: also wrap link on Chromium
Using `word-break: break-all` even looks better than the default
breaking in Firefox.

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 a {
   color: #666;
   text-decoration: none;
+  word-break: break-all;
 }
 
 a:hover {
